crates/viewer/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.EyeControls3D.snap
---
source: crates/viewer/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
position: [[0.0, 0.0, 0.0]]
look_target: [[0.0, 0.0, 0.0]]
spin_speed: [0.0]
eye_up: [[0.0, 0.0, 0.0]]
kind: [2]
speed: [0.0]
tracking_entity: []
